# PI-8

./: README.md
01-Banco de Dados/: Acesso ao Banco - TiDB.txt  Acesso ao Banco - mydb.txt  Acesso ao Banco - teste.txt  Banco de Dados.md  GitHub-Banco de Dados.url
01-Banco de Dados/BurntSushi-erd/: pi-8-erd.er
01-Banco de Dados/MySQL-Workbench/: pi-8-script.sql  pi-8-v2.mwb  pi-8-v2.mwb.bak  pi-8.mwb  pi-8.mwb.bak
01-Banco de Dados/consultas_sql/: CASE_WHEN.sql  agrupar_faixa_etaria.sql  count_group_by.sql  create_view_faixas_etarias.sql  create_view_ocorrencias.sql  inner_join_composto.sql  inner_join_composto_geral.sql  teste_adicionar_faixa_etaria.sql
01-Banco de Dados/dados iniciais/: Baixar Dados.ipynb  Rascunhos.ipynb  cidades.csv  links úteis.docx
01-Banco de Dados/dados iniciais/.ipynb_checkpoints/: Baixar Dados-checkpoint.ipynb
01-Banco de Dados/dados_iniciais/: Rascunhos.ipynb  estados.csv  links úteis.docx
01-Banco de Dados/img/: freedb_panel.png.bac
01-Banco de Dados/obsoletos/: Acesso ao Banco - planetscale.txt  Acesso ao Banco - pythonanywhere.txt
02-Back-End/obsoletos/dengue_api-bkp-1/: pyproject.toml
02-Back-End/obsoletos/dengue_api-bkp-1/tests/: test_dengue_api.py
02-Back-End/teste_modulos/: __paths__.py
03-Front-End/public/: api-test.html  cadAsset.html  cadLocation.html  cadOcorrencias.html  cadUser.html  consultas.html  home.html  queryBairro.html  queryCidade.html  queryEstado.html  queryRua.html
_Plano de Ação/: Desenvolvimento do Protótipo.html  Desenvolvimento do Protótipo.md  Desenvolvimento do Protótipo.xlsx
(+40 files in other folders)
